--- a/css/custom.css
+++ b/css/custom.css
@@ -1,31 +1,32 @@
-.color-red {
-    background-color: pink;
-    border: purple solid 10px;
-}
-.color-red:hover {
-    background-color: palevioletred;
-}
-
 body {
-    background-image: url("https://s.yimg.com/uu/api/res/1.2/DdytqdFTgtQuxVrHLDdmjQ--~B/aD03MTY7dz0xMDgwO3NtPTE7YXBwaWQ9eXRhY2h5b24-/https://media-mbst-pub-ue1.s3.amazonaws.com/creatr-uploaded-images/2019-11/7b5b5330-112b-11ea-a77f-7c019be7ecae") ;
-    
-    background-repeat: no-repeat;
-    background-size: cover;
-      
+	font: 'Raleway', sans-serif;
+    color: rgba(0,0,0,.5);
+    text-align: center;
+    text-transform: uppercase;
+    letter-spacing: .5em;
+    top: 15%;
+	background: linear-gradient(to right, yellow,  green); /* Standard syntax */
 }
 
 h1 {
-    margin: 200px auto;
+    font: 600 3.5em 'Raleway', sans-serif;
+    color: rgba(0,0,0,.5);
     text-align: center;
+    text-transform: uppercase;
+    letter-spacing: .5em;
+    margin: 0 auto;
+    width: fit-content;
+    background-color: transparent;
 }
 
-.line {
-    margin: 0px auto;
-    width: 100px;
-    border-bottom: solid red;
-    margin-bottom: 50px;
+h3 {
+	font: 900 1em 'Raleway', sans-serif;
+    text-align: center;
+    text-transform: none;
+    letter-spacing: 0.01em;
+    
+
+
+  
 }
-.custom-button {
-margin: 0px auto;
-justify-content: center;
-}
+
